[project]
name = "pykeen-kraus-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "triton>=3.2.0",
    "torch>=2.6.0",
    "pykeen>=1.11.0",
    "pandas>=2.2.3",
    "rdflib>=7.1.3",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "tqdm>=4.67.1",
    "pydantic>=2.10.6",
]
